--- a/.gitignore
+++ b/.gitignore
@@ -1,30 +1,30 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+# # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
-# dependencies
-/node_modules
-/.pnp
-.pnp.js
+# # dependencies
+# /node_modules
+# /.pnp
+# .pnp.js
 
-# testing
-/coverage
+# # testing
+# /coverage
 
-# next.js
-/.next/
-/out/
+# # next.js
+# /.next/
+# /out/
 
-# production
-/build
+# # production
+# /build
 
-# misc
-.DS_Storen
+# # misc
+# .DS_Storen
 
-# debugjkjkjkj
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+# # debugjkjkjkj
+# npm-debug.log*
+# yarn-debug.log*
+# yarn-error.log*
 
-# local env files
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
+# # local env files
+# .env.local
+# .env.development.local
+# .env.test.local
+# .env.production.local
